Fix header overflow style causing header buttons from being cut off
Reverts the change to flushing for notification icons in
I55c18cf723a32f80b93a01dd0687e005162c4e93

Bug: T343908

--- a/resources/skins.minerva.base.styles/userMenu.less
+++ b/resources/skins.minerva.base.styles/userMenu.less
@@ -16,7 +16,10 @@
 	justify-content: flex-end;
 	// Show the list relative the button.
 	position: relative;
-	.cdx-mixin-button-layout-flush( 'end', true, 'large' );
+	// align the last icon (i.e. notification or use menu) with the container edge.
+	& > *:last-child {
+		.cdx-mixin-button-layout-flush( 'end', true, 'large' );
+	}
 
 	.minerva-notifications {
 		ul {
